hphp/hack/test/typecheck/this_member.php.exp
File "this_member.php", line 16, characters 5-20:
Invalid assignment (Typing[4110])
File "this_member.php", line 15, characters 24-24:
Expected <expr#1>
File "this_member.php", line 16, characters 5-9:
  where '<expr#1>' is a reference to this expression
File "this_member.php", line 16, characters 13-17:
But got X
File "this_member.php", line 15, characters 24-24:
Since X is not final
File "this_member.php", line 16, characters 13-17:
this might not be a X
